--- a/plugin/gtk3/mikutter_window.glade
+++ b/plugin/gtk3/mikutter_window.glade
@@ -4,6 +4,9 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkApplicationWindow" id="window">
     <property name="can_focus">False</property>
+    <property name="default_width">300</property>
+    <property name="default_height">600</property>
+    <property name="icon">../../core/skin/data/icon_alternative.png</property>
     <property name="show_menubar">False</property>
     <child type="titlebar">
       <placeholder/>
