--- a/plugin/gtk3/mikutter_window.glade
+++ b/plugin/gtk3/mikutter_window.glade
@@ -72,6 +72,7 @@
             <property name="can_focus">False</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
+            <property name="column_spacing">6</property>
             <property name="column_homogeneous">True</property>
             <child>
               <placeholder/>
